# dsabench

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PUBLISHING.md  README.md  pyproject.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  publish.yml
examples/: 01_basic.py  02_decorator.py  03_auto.py  04_compare.py  05_complexity.py  06_export_and_graphs.py  07_async_generators_threads.py  demo.py
src/bench/: __init__.py  auto.py  benchmark.py  compare.py  complexity.py  config.py  cpu.py  decorator.py  exceptions.py  export.py  graph.py  memory.py  profiler.py  report.py  stats.py  timer.py  types.py  utils.py
tests/: conftest.py  test_async_gen.py  test_auto.py  test_bench.py  test_compare.py  test_complexity.py  test_config.py  test_cpu.py  test_decorator.py  test_export.py  test_graph.py  test_integration.py  test_memory.py  test_profiler.py  test_stats.py  test_timer.py  test_types.py  test_utils.py
